--- a/Опе_ Опе_ Но_Ми.html
+++ b/Опе_ Опе_ Но_Ми.html
@@ -2,10 +2,17 @@
     <style>
        body {
           color: black;
+          padding: 20%;
        }
        img{
           width: 30%;
        }
+       @media screen and (max-width: 700px)
+       {
+        body{
+            padding:0 ;
+        }
+       } 
     </style>
  </head>
 
@@ -16,12 +23,14 @@
 <p>Этот плод называют &quot;Величайшим дьявольским плодом&quot; (究極の悪魔の実 Кю:кёку но Акума но Ми?), благодаря его уникальной способности давать другому человеку вечную жизнь в обмен на жизнь самого пользователя.[5] Дозорные собирались заплатить BeliSymbol5 000 000 000 чтобы выкупить его у пирата по имени Диес Баррелс.Плод также известен и является желанным для многих и благодаря другой его способности, а именно проводить чудесные операции, лечить тяжёлые болезни без лекарств и даже исцелять физические недостатки.</p>
 
 <img src="Ope_Ope_no_Mi_Infobox.webp" alt="">
+<p></p>
 
 <b>Этимология</b>
 
 <p>«Oпэ» происходит от слова &quot;операция&quot;, поскольку пространство, которое создает пользователь, можно сравнить с операционной, а пользователя с хирургом.</p>
 
 <b>Внешний вид</b>
+<p></p>
 
 <img src="Odddddd_Anime_Concept_Art.webp" alt="">
 <p>Опэ Опэ но Ми имеет форму сердца и, в отличии от показанных ранее плодов, довольно маленького размера, его можно легко взять двумя пальцами. Сам он красного цвета, а внутри он жёлто-зелёный. Его стебель имеет форму закрученной сверху буквы «Т». На своей поверхности имеет закрученные узоры, характерные для природных дьявольских плодов.</p>
