--- a/Уо_Уо_Но_Ми.html
+++ b/Уо_Уо_Но_Ми.html
@@ -1,3 +1,17 @@
+    <!--отсюда-->
+    <style>
+        body {
+            padding: 20%;
+        }
+
+        @media screen and (max-width: 700px) {
+            body {
+                padding: 0;
+            }
+        }
+    
+    </style>
+    <!--До сюда-->
 <b>Уо Уо но Ми, модель: Сэйрю</b>
 <p><a href="Фрукты_ван_пис.html">назад</a></p>
 
