--- a/баку_баку_но_ми.html
+++ b/баку_баку_но_ми.html
@@ -1,3 +1,17 @@
+    <!--отсюда-->
+    <style>
+        body {
+            padding: 20%;
+        }
+
+        @media screen and (max-width: 700px) {
+            body {
+                padding: 0;
+            }
+        }
+    
+    </style>
+    <!--До сюда-->
 <p>Баку Баку но Ми<p></p>
 <p><a href="Фрукты_ван_пис.html">назад</a></p>
 </p> Баку Баку но Ми — это Дьявольский плод типа Парамеция, который позволяет пользователю есть и жевать что угодно (кроме Кайросэки), начиная с дерева и заканчивая самыми крепкими металлами. Съеденные элементы могут быть слиты с телом пользователя в оружие или быть объединены вместе, чтобы создать что-то другое. «Баку» — звук удара по листу металла, тогда как «Паку» — звук процесса еды. Этот Дьявольский плод был съеден Ваполом.</p>
