--- a/гому_гому_но_ми.html
+++ b/гому_гому_но_ми.html
@@ -1,3 +1,17 @@
+    <!--отсюда-->
+    <style>
+        body {
+            padding: 20%;
+        }
+
+        @media screen and (max-width: 700px) {
+            body {
+                padding: 0;
+            }
+        }
+    
+    </style>
+    <!--До сюда-->
 <h1 id="-">гому гому но ми</h1>
 <p><a href="Фрукты_ван_пис.html">назад</a></p>
 <p>Гому Гому но Ми первоначально известный как Хито Хито но Ми, модель: Ника, представляет собой дьявольский плод типа Мифический зоан, который позволяет пользователю превращаться в легендарного «Бога Солнца» Ника и получить его способности, а именно тело со свойствами резины.Мировое Правительство переименовало его, чтобы стереть из истории первоначальное название плода,и в результате он был реклассифицирован как плод типа парамеция,который якобы превращает пользователя в Резинового Человека (ゴム人間 Гому Нингэн?).</p>
